# flygym-tracker

./: .gitignore  DESIGN.md  INSTALL.md  LICENSE  README.md  conftest.py  gui_state.json  pyproject.toml  requirements.txt  run.bat
calib/: calibration.json
calib_faces/: calibration.json
config/: default_config.yaml  flygym_rig.yaml
docs/: settings_surfaces.md  validation_realfly.md
packaging/: build_installer.py  debug_run.py  flygym_tracker.iss  flygym_tracker.spec  launcher.py
src/flygym_tracker/: __init__.py  adaptive_rotation.py  calibrate_wizard.py  calibration.py  cli.py  config.py  cv_setup.py  diagnostics.py  face_learning.py  fly_runner.py  fly_tracking.py  frame_source.py  gui_support.py  live_vial_selector.py  logger.py  marker_band.py  markers.py  monitor.py  pipeline.py  readiness.py  rotation.py  settings_model.py  settings_panel.py  types.py  video_recorder.py
src/flygym_tracker/gui/: __init__.py  app.py  behaviour_series.py  camera_lock_dialog.py  camera_picker.py  camera_session.py  camera_status.py  camera_worker.py  flow_layout.py  gui_state.py  main_window.py  plot_dock.py  preview.py  readiness_strip.py  results_panel.py  run_controller.py  run_panel.py  session_bar.py  setting_row.py  settings_view.py  theme.py  track_overlay.py  vial_draw.py  vial_overlay.py  video_jobs.py  video_stage.py
tests/: conftest.py  test_activity.py  test_adaptive_rotation.py  test_band_select.py  test_behaviour_series.py  test_calibration.py  test_calibration_markers.py  test_camera_lock.py  test_camera_picker.py  test_cli.py  test_config.py  test_cv_setup.py  test_diagnostics.py  test_face_learning.py  test_fly_runner.py  test_fly_tracking.py  test_frame_source.py  test_gui_auto_camera.py  test_gui_camera_lock_dialog.py  test_gui_camera_session.py  test_gui_flow_layout.py  test_gui_launcher.py  test_gui_layout.py  test_gui_layout_chrome.py  test_gui_live_settings.py  test_gui_main_window.py  test_gui_preview.py  test_gui_recording.py  test_gui_results_panel.py  test_gui_run_controller.py  test_gui_setting_row.py  test_gui_settings_view.py  test_gui_state.py  test_gui_stepper.py  test_gui_support.py  test_gui_theme.py  test_gui_tracking.py  test_gui_video_stage.py  test_live_vial_selector.py  test_local_config.py  (+22 more)
