[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flygym-tracker"
version = "0.1.0.dev0"
description = "Per-vial Drosophila locomotor-activity tracker for the FlyGym v2 IR-silhouette rig"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.scripts]
flygym-tracker = "flygym_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
