[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flygym-tracker"
version = "0.1.0.dev8"
description = "Per-vial Drosophila locomotor-activity tracker for the FlyGym v2 IR-silhouette rig"
requires-python = ">=3.9"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
# SOURCE-AVAILABLE, NOT OPEN SOURCE. A `LicenseRef-` SPDX id is the correct way to name a licence
# the SPDX list does not carry, and it is what stops tooling reporting this as an OSI licence --
# PolyForm Noncommercial restricts fields of use, which is exactly what the OSI does not approve.
#
# NO `License ::` CLASSIFIER HERE. PEP 639 supersedes them with the `license` expression above, and
# setuptools >= 77 REFUSES TO BUILD if both are present -- caught by actually building the wheel.
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Private :: Do Not Upload",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.scripts]
flygym-tracker = "flygym_tracker.cli:main"

[project.gui-scripts]
# A GUI entry point, not a console one: on Windows this builds `flygym-tracker-gui.exe` against
# pythonw, so double-clicking it does not leave a black console window behind the app for the rest
# of the session. The CLI stays a console script -- it has output to show.
flygym-tracker-gui = "flygym_tracker.gui:main"

[project.optional-dependencies]
# The desktop app. Deliberately OPTIONAL: the rig runs unattended experiments from the CLI, and a
# missing GUI toolkit must never be a reason for an overnight run to fail to start. LGPL, so it can
# ship in a commercial product without licensing the product itself.
gui = ["PySide6>=6.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
